--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "7.9.0",
+    "npm": "4.2.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
