--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.0.1",
     "koa-router": "^7.2.1",
+    "koa-static": "^4.0.1",
+    "koa-views": "^6.0.2",
     "mongoose": "4.10.5"
   }
 }
