--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "export NODE_ENV=prod && node app.js",
+    "test": "mocha --timeout 10000"
   },
   "engines": {
     "node": "7.9.0",
@@ -21,5 +22,10 @@
     "koa-static": "^4.0.1",
     "koa-views": "^6.0.2",
     "mongoose": "4.10.5"
+  },
+  "devDependencies": {
+    "chai": "^4.1.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.4.2"
   }
 }
